--- a/webclient/public/index.html
+++ b/webclient/public/index.html
@@ -19,5 +19,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript">
+      var response = {
+        user: '{{ user | escapejs }}',
+        status: '{{ status | escapejs }}'
+      };
+    </script>
   </body>
 </html>
