--- a/webclient/public/index.html
+++ b/webclient/public/index.html
@@ -20,9 +20,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="text/javascript">
-      var response = {
-        user: '{{ user | escapejs }}',
-        status: '{{ status | escapejs }}'
+      var auth = {
+        id: '{{ id | escapejs }}',
+        error: '{{ error | escapejs }}',
+        message: '{{ message | escapejs }}'
       };
     </script>
   </body>
