feat(www): aggiunge lo script per collecare il client al backend

--- a/packages/www/public/index.html
+++ b/packages/www/public/index.html
@@ -28,5 +28,12 @@
       javascript!</noscript
     >
     <div id="root"></div>
+    <script type="text/javascript">
+      var auth = {
+        id: "{{ id | escapejs }}",
+        error: "{{ error | escapejs }}",
+        message: "{{ message | escapejs }}",
+      };
+    </script>
   </body>
 </html>
